[ADNCEIBA]Se establece nueva configuracion del proyecto

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,12 +9,10 @@ sonar.sourceEncoding=UTF-8
 sonar.java.source=1.8
 sonar.java.target=1.8
 
-sonar.modules=infrastructure,domain,application
+sonar.modules=consultorio
 
 
-infrastructure.sonar.projectBaseDir=./Consultorio-Back/infrastructure
-domain.sonar.projectBaseDir=./Consultorio-Back/domain
-application.sonar.projectBaseDir=./Consultorio-Back/application
+consultorio.sonar.projectBaseDir=./consultorio
 
 sonar.sources=src/main/java/
 sonar.java.binaries=build/classes/java/main
