--- a/consultorio/build.gradle
+++ b/consultorio/build.gradle
@@ -1,24 +1,48 @@
 plugins {
 	id 'org.springframework.boot' version '2.2.0.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
+	id 'jacoco'
 	id 'java'
+	id "org.sonarqube" version "2.7"
 }
 
 group = 'com.ceiba'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
+sonarqube {
+	properties {
+		property "sonar.sourceEncoding", "UTF-8"
+	}
+}
+configurations {
+	developmentOnly
+	runtimeClasspath {
+		extendsFrom developmentOnly
+	}
+}
+
 repositories {
 	mavenCentral()
 }
+apply plugin: 'java'
+apply plugin: 'jacoco'
 
 dependencies {
-	
+	compile('org.modelmapper:modelmapper:1.1.0')
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	runtimeOnly  'com.h2database:h2'
+	compile('org.modelmapper:modelmapper:1.1.0')
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.6.0-M1'
+	testCompile group: 'org.junit.platform', name: 'junit-platform-runner', version: '1.6.0-M1'
+	testCompile group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
+	compileOnly 'org.projectlombok:lombok'
 	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.7.0'
 	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.7.0'
+	runtimeOnly 'com.h2database:h2'
+	annotationProcessor 'org.projectlombok:lombok'
+	runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
@@ -26,4 +50,16 @@ dependencies {
 
 test {
 	useJUnitPlatform()
+	dependsOn 'cleanTest'
 }
+sonarqube {
+	properties {
+		property "sonar.sources", "src/main/java"
+		property "sonar.java.binaries", "build/classes/java/main"
+		property "sonar.tests", "src/test/java"
+		property "sonar.test.binaries", "build/classes/java/test"
+		property "sonar.jacoco.reportPaths", "build/jacoco/test.exec"
+		property "sonar.junit.reportPaths", "build/test-results/test"
+	}
+}
+
