[ADNCEIBA]Se añaden nuevos servicios y clases

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -17,9 +17,10 @@ consultorio.sonar.projectBaseDir=./consultorio
 sonar.sources=src/main/java/
 sonar.java.binaries=build/classes/java/main
 sonar.tests=src/test/java/
-#sonar.java.test.binaries=build/classes/java/test
+sonar.java.test.binaries=build/classes/java/test
 
 sonar.java.coveragePlugin=jacoco
 sonar.jacoco.reportPaths=build/jacoco/test.exec
 sonar.junit.reportPaths =build/test-results/test
 sonar.jacoco.itReportPath=build/jacoco/test.exec
+
