--- a/Consultorio-Front/package.json
+++ b/Consultorio-Front/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build ",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -18,7 +18,6 @@
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
     "@angular/http": "^6.1.7",
-    "@angular/material": "^7.3.7",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
@@ -26,7 +25,9 @@
     "@ngx-translate/http-loader": "^3.0.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "jquery": "^3.4.1",
     "ngx-bootstrap": "^3.1.2",
+    "popper": "^1.0.1",
     "rxjs": "~6.3.3",
     "sweetalert2": "^7.26.28",
     "tslib": "^1.9.0",
