[ADNCEIBA]Se establece base de pruebas

--- a/consultorio/build.gradle
+++ b/consultorio/build.gradle
@@ -1,21 +1,27 @@
 plugins {
-	id 'org.springframework.boot' version '2.2.0.RELEASE'
+id 'org.springframework.boot' version '2.2.0.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
 	id 'jacoco'
 	id 'java'
 	id "org.sonarqube" version "2.7"
-	id "net.foragerr.jmeter" version "1.1.0-4.0"
 }
 
 group = 'com.ceiba'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
+repositories {
+	mavenCentral()
+}
+
 sonarqube {
 	properties {
 		property "sonar.sourceEncoding", "UTF-8"
 	}
 }
+
+apply plugin: 'java'
+apply plugin: 'jacoco'
 configurations {
 	developmentOnly
 	runtimeClasspath {
@@ -23,21 +29,14 @@ configurations {
 	}
 }
 
-repositories {
-	mavenCentral()
-}
-apply plugin: 'java'
-apply plugin: 'jacoco'
-
 dependencies {
-	compile('org.modelmapper:modelmapper:1.1.0')
+		compile('org.modelmapper:modelmapper:1.1.0')
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compile('org.modelmapper:modelmapper:1.1.0')
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.6.0-M1'
-	testCompile group: 'org.junit.platform', name: 'junit-platform-runner', version: '1.6.0-M1'
 	testCompile group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
+	testCompile 'junit:junit:4.12'
 	compileOnly 'org.projectlombok:lombok'
 	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.7.0'
 	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.7.0'
@@ -51,12 +50,10 @@ dependencies {
 
 test {
 	useJUnitPlatform()
-	dependsOn 'cleanTest'
 }
-jmeter {
-testFileDir = file("src/test/jmeter") //a custom directory for jmx files
-enableReports = true
-enableExtendedReports = false
+test {
+	useJUnitPlatform()
+	dependsOn 'cleanTest'
 }
 sonarqube {
 	properties {
@@ -68,4 +65,3 @@ sonarqube {
 		property "sonar.junit.reportPaths", "build/test-results/test"
 	}
 }
-
