--- a/Consultorio-Front/angular.json
+++ b/Consultorio-Front/angular.json
@@ -134,6 +134,21 @@
               "**/node_modules/**"
             ]
           }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "front:build",
+            "proxyConfig": "proxy.conf.json"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "front:build:production"
+            },
+            "en": {
+              "browserTarget": "front:build:en"
+            }
+          }
         }
       }
     }
