--- a/Consultorio-Front/package.json
+++ b/Consultorio-Front/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-conf proxy.conf.json",
     "build": "ng build ",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
+    
   },
   "private": true,
   "dependencies": {
@@ -54,4 +55,5 @@
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
   }
+  
 }
