--- a/Consultorio-Front/package.json
+++ b/Consultorio-Front/package.json
@@ -8,7 +8,6 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
-    
   },
   "private": true,
   "dependencies": {
@@ -27,6 +26,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "jquery": "^3.4.1",
+    "ngentest": "^1.0.5",
     "ngx-bootstrap": "^3.1.2",
     "popper": "^1.0.1",
     "rxjs": "~6.3.3",
@@ -55,5 +55,4 @@
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
   }
-  
 }
